# TurnOfLife

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
.github/workflows/: ci.yml  main.yml
src/: main.c  renderer.c  renderer.h  world.c  world.h
